--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,9 +1,9 @@
-name: Deploy GitHub Pages
+name: Deploy GitHub Pages with Dark Mode and Sidebar Links
 
 on:
   push:
     branches:
-      - main
+      - main  # or whichever branch you're deploying from
 
 jobs:
   build-and-deploy:
@@ -13,6 +13,47 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Create Dark Mode CSS
+        run: |
+          echo '/* Dark mode styling */' > ./docs/dark-mode.css
+          echo 'body { background-color: #121212; color: #ffffff; }' >> ./docs/dark-mode.css
+          echo 'a { color: #bb86fc; }' >> ./docs/dark-mode.css
+          echo 'header, footer, nav { background-color: #1e1e1e; color: #ffffff; }' >> ./docs/dark-mode.css
+          echo '.sidebar-links { margin-top: 20px; } .sidebar-links a { display: block; margin: 10px 0; color: #bb86fc; text-decoration: none; }' >> ./docs/dark-mode.css
+          
+      - name: Create Toggle Script for Dark/Light Mode
+        run: |
+          echo '<script>' > ./docs/dark-light-toggle.js
+          echo 'function toggleTheme() {' >> ./docs/dark-light-toggle.js
+          echo '  const darkMode = localStorage.getItem("darkMode") === "enabled";' >> ./docs/dark-light-toggle.js
+          echo '  if (darkMode) {' >> ./docs/dark-light-toggle.js
+          echo '    document.body.classList.remove("dark-mode");' >> ./docs/dark-light-toggle.js
+          echo '    localStorage.setItem("darkMode", "disabled");' >> ./docs/dark-light-toggle.js
+          echo '  } else {' >> ./docs/dark-light-toggle.js
+          echo '    document.body.classList.add("dark-mode");' >> ./docs/dark-light-toggle.js
+          echo '    localStorage.setItem("darkMode", "enabled");' >> ./docs/dark-light-toggle.js
+          echo '  }' >> ./docs/dark-light-toggle.js
+          echo '}' >> ./docs/dark-light-toggle.js
+          echo 'window.onload = function() {' >> ./docs/dark-light-toggle.js
+          echo '  if (localStorage.getItem("darkMode") === "enabled") {' >> ./docs/dark-light-toggle.js
+          echo '    document.body.classList.add("dark-mode");' >> ./docs/dark-light-toggle.js
+          echo '  }' >> ./docs/dark-light-toggle.js
+          echo '}' >> ./docs/dark-light-toggle.js
+          echo '</script>' >> ./docs/dark-light-toggle.js
+
+      - name: Add CSS, Script, and Sidebar Links to HTML
+        run: |
+          if [ -f ./docs/index.html ]; then
+            # Link CSS and JavaScript for toggle
+            sed -i '/<\/head>/i <link rel="stylesheet" href="dark-mode.css">' ./docs/index.html
+            sed -i '/<\/head>/i <script src="dark-light-toggle.js"></script>' ./docs/index.html
+            # Add dark/light mode toggle button
+            sed -i '/<body>/a <button onclick="toggleTheme()" style="position:fixed;top:10px;right:10px;">Toggle Dark/Light Mode</button>' ./docs/index.html
+            # Add sidebar links
+            sed -i '/<body>/a <div class="sidebar-links"><a href="http://patreon.com/esaruoho" target="_blank">Patreon</a><a href="https://github.com/esaruoho/org.lackluster.Paketti.xrnx/" target="_blank">GitHub Paketti</a><a href="https://discord.gg/Qex7k5j4wG" target="_blank">Discord</a><a href="https://lackluster.gumroad.com/l/paketti" target="_blank">Gumroad Paketti</a></div>' ./docs/index.html
+          fi
+
+      # Continue with the usual build and deploy steps for MkDocs or other generators
       - name: Install MkDocs
         run: pip install mkdocs
 
