--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,44 +13,47 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Create Documentation Directory
+        run: mkdir -p ./Documentation
+
       - name: Create Dark Mode CSS
         run: |
-          echo '/* Dark mode styling */' > ./docs/dark-mode.css
-          echo 'body { background-color: #121212; color: #ffffff; }' >> ./docs/dark-mode.css
-          echo 'a { color: #bb86fc; }' >> ./docs/dark-mode.css
-          echo 'header, footer, nav { background-color: #1e1e1e; color: #ffffff; }' >> ./docs/dark-mode.css
-          echo '.sidebar-links { margin-top: 20px; } .sidebar-links a { display: block; margin: 10px 0; color: #bb86fc; text-decoration: none; }' >> ./docs/dark-mode.css
-          
+          echo '/* Dark mode styling */' > ./Documentation/dark-mode.css
+          echo 'body { background-color: #121212; color: #ffffff; }' >> ./Documentation/dark-mode.css
+          echo 'a { color: #bb86fc; }' >> ./Documentation/dark-mode.css
+          echo 'header, footer, nav { background-color: #1e1e1e; color: #ffffff; }' >> ./Documentation/dark-mode.css
+          echo '.sidebar-links { margin-top: 20px; } .sidebar-links a { display: block; margin: 10px 0; color: #bb86fc; text-decoration: none; }' >> ./Documentation/dark-mode.css
+
       - name: Create Toggle Script for Dark/Light Mode
         run: |
-          echo '<script>' > ./docs/dark-light-toggle.js
-          echo 'function toggleTheme() {' >> ./docs/dark-light-toggle.js
-          echo '  const darkMode = localStorage.getItem("darkMode") === "enabled";' >> ./docs/dark-light-toggle.js
-          echo '  if (darkMode) {' >> ./docs/dark-light-toggle.js
-          echo '    document.body.classList.remove("dark-mode");' >> ./docs/dark-light-toggle.js
-          echo '    localStorage.setItem("darkMode", "disabled");' >> ./docs/dark-light-toggle.js
-          echo '  } else {' >> ./docs/dark-light-toggle.js
-          echo '    document.body.classList.add("dark-mode");' >> ./docs/dark-light-toggle.js
-          echo '    localStorage.setItem("darkMode", "enabled");' >> ./docs/dark-light-toggle.js
-          echo '  }' >> ./docs/dark-light-toggle.js
-          echo '}' >> ./docs/dark-light-toggle.js
-          echo 'window.onload = function() {' >> ./docs/dark-light-toggle.js
-          echo '  if (localStorage.getItem("darkMode") === "enabled") {' >> ./docs/dark-light-toggle.js
-          echo '    document.body.classList.add("dark-mode");' >> ./docs/dark-light-toggle.js
-          echo '  }' >> ./docs/dark-light-toggle.js
-          echo '}' >> ./docs/dark-light-toggle.js
-          echo '</script>' >> ./docs/dark-light-toggle.js
+          echo '<script>' > ./Documentation/dark-light-toggle.js
+          echo 'function toggleTheme() {' >> ./Documentation/dark-light-toggle.js
+          echo '  const darkMode = localStorage.getItem("darkMode") === "enabled";' >> ./Documentation/dark-light-toggle.js
+          echo '  if (darkMode) {' >> ./Documentation/dark-light-toggle.js
+          echo '    document.body.classList.remove("dark-mode");' >> ./Documentation/dark-light-toggle.js
+          echo '    localStorage.setItem("darkMode", "disabled");' >> ./Documentation/dark-light-toggle.js
+          echo '  } else {' >> ./Documentation/dark-light-toggle.js
+          echo '    document.body.classList.add("dark-mode");' >> ./Documentation/dark-light-toggle.js
+          echo '    localStorage.setItem("darkMode", "enabled");' >> ./Documentation/dark-light-toggle.js
+          echo '  }' >> ./Documentation/dark-light-toggle.js
+          echo '}' >> ./Documentation/dark-light-toggle.js
+          echo 'window.onload = function() {' >> ./Documentation/dark-light-toggle.js
+          echo '  if (localStorage.getItem("darkMode") === "enabled") {' >> ./Documentation/dark-light-toggle.js
+          echo '    document.body.classList.add("dark-mode");' >> ./Documentation/dark-light-toggle.js
+          echo '  }' >> ./Documentation/dark-light-toggle.js
+          echo '}' >> ./Documentation/dark-light-toggle.js
+          echo '</script>' >> ./Documentation/dark-light-toggle.js
 
       - name: Add CSS, Script, and Sidebar Links to HTML
         run: |
-          if [ -f ./docs/index.html ]; then
+          if [ -f ./Documentation/index.html ]; then
             # Link CSS and JavaScript for toggle
-            sed -i '/<\/head>/i <link rel="stylesheet" href="dark-mode.css">' ./docs/index.html
-            sed -i '/<\/head>/i <script src="dark-light-toggle.js"></script>' ./docs/index.html
+            sed -i '/<\/head>/i <link rel="stylesheet" href="dark-mode.css">' ./Documentation/index.html
+            sed -i '/<\/head>/i <script src="dark-light-toggle.js"></script>' ./Documentation/index.html
             # Add dark/light mode toggle button
-            sed -i '/<body>/a <button onclick="toggleTheme()" style="position:fixed;top:10px;right:10px;">Toggle Dark/Light Mode</button>' ./docs/index.html
+            sed -i '/<body>/a <button onclick="toggleTheme()" style="position:fixed;top:10px;right:10px;">Toggle Dark/Light Mode</button>' ./Documentation/index.html
             # Add sidebar links
-            sed -i '/<body>/a <div class="sidebar-links"><a href="http://patreon.com/esaruoho" target="_blank">Patreon</a><a href="https://github.com/esaruoho/org.lackluster.Paketti.xrnx/" target="_blank">GitHub Paketti</a><a href="https://discord.gg/Qex7k5j4wG" target="_blank">Discord</a><a href="https://lackluster.gumroad.com/l/paketti" target="_blank">Gumroad Paketti</a></div>' ./docs/index.html
+            sed -i '/<body>/a <div class="sidebar-links"><a href="http://patreon.com/esaruoho" target="_blank">Patreon</a><a href="https://github.com/esaruoho/org.lackluster.Paketti.xrnx/" target="_blank">GitHub Paketti</a><a href="https://discord.gg/Qex7k5j4wG" target="_blank">Discord</a><a href="https://lackluster.gumroad.com/l/paketti" target="_blank">Gumroad Paketti</a></div>' ./Documentation/index.html
           fi
 
       # Continue with the usual build and deploy steps for MkDocs or other generators
