--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,58 +1,35 @@
-name: Deploy GitHub Pages with Dark Mode and Sidebar Links
+name: Deploy Paketti GitHub Pages with Dark Mode
 
 on:
   push:
     branches:
-      - main  # or whichever branch you're deploying from
+      - main  # Triggers on push to the main branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Check out the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Add Dark/Light Mode Toggle JavaScript
+      # Step 2: Ensure dark-mode.css and dark-light-toggle.js are present in the Documentation folder
+      - name: Verify CSS and JavaScript Files
         run: |
-          echo '<script>' > ./Documentation/dark-light-toggle.js
-          echo 'function toggleTheme() {' >> ./Documentation/dark-light-toggle.js
-          echo '  const darkMode = localStorage.getItem("darkMode") === "enabled";' >> ./Documentation/dark-light-toggle.js
-          echo '  if (darkMode) {' >> ./Documentation/dark-light-toggle.js
-          echo '    document.body.classList.remove("dark-mode");' >> ./Documentation/dark-light-toggle.js
-          echo '    localStorage.setItem("darkMode", "disabled");' >> ./Documentation/dark-light-toggle.js
-          echo '  } else {' >> ./Documentation/dark-light-toggle.js
-          echo '    document.body.classList.add("dark-mode");' >> ./Documentation/dark-light-toggle.js
-          echo '    localStorage.setItem("darkMode", "enabled");' >> ./Documentation/dark-light-toggle.js
-          echo '  }' >> ./Documentation/dark-light-toggle.js
-          echo '}' >> ./Documentation/dark-light-toggle.js
-          echo 'window.onload = function() {' >> ./Documentation/dark-light-toggle.js
-          echo '  if (localStorage.getItem("darkMode") === "enabled") {' >> ./Documentation/dark-light-toggle.js
-          echo '    document.body.classList.add("dark-mode");' >> ./Documentation/dark-light-toggle.js
-          echo '  }' >> ./Documentation/dark-light-toggle.js
-          echo '}' >> ./Documentation/dark-light-toggle.js
-          echo '</script>' >> ./Documentation/dark-light-toggle.js
+          if [ ! -f ./Documentation/dark-mode.css ]; then echo "dark-mode.css is missing"; exit 1; fi
+          if [ ! -f ./Documentation/dark-light-toggle.js ]; then echo "dark-light-toggle.js is missing"; exit 1; fi
 
-      - name: Link CSS, Script, and Sidebar Links in HTML
-        run: |
-          if [ -f ./Documentation/index.html ]; then
-            # Link existing CSS and JavaScript for toggle
-            sed -i '/<\/head>/i <link rel="stylesheet" href="dark-mode.css">' ./Documentation/index.html
-            sed -i '/<\/head>/i <script src="dark-light-toggle.js"></script>' ./Documentation/index.html
-            # Add dark/light mode toggle button
-            sed -i '/<body>/a <button onclick="toggleTheme()" class="toggle-button">Toggle Dark/Light Mode</button>' ./Documentation/index.html
-            # Add sidebar links
-            sed -i '/<body>/a <div class="sidebar-links"><a href="http://patreon.com/esaruoho" target="_blank">Patreon</a><a href="https://github.com/esaruoho/org.lackluster.Paketti.xrnx/" target="_blank">GitHub Paketti</a><a href="https://discord.gg/Qex7k5j4wG" target="_blank">Discord</a><a href="https://lackluster.gumroad.com/l/paketti" target="_blank">Gumroad Paketti</a></div>' ./Documentation/index.html
-          fi
-
+      # Step 3: Install MkDocs and Material Theme for building
       - name: Install MkDocs and Material Theme
         run: |
-          pip install mkdocs
-          pip install mkdocs-material
+          pip install mkdocs mkdocs-material
 
+      # Step 4: Build the MkDocs site
       - name: Build site
         run: mkdocs build -d build
 
+      # Step 5: Deploy the site to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
