--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,25 +1,24 @@
 site_name: "Paketti - A Framework / Firmware update for Renoise created by Esa Ruoho a.k.a. Lackluster"
-docs_dir: "docs"  # Directory for your Markdown files and assets
+docs_dir: "docs"  # Folder for additional documentation files
+
 theme:
-  name: "material"  # Use Material theme for modern styling
+  name: "material"
   palette:
     primary: "indigo"
     accent: "indigo"
-    toggle:
-      icon: "material/brightness-4"
-      name: "Switch to dark mode"
-    scheme: "slate"  # Optional: Default to dark mode
-extra_css:
-  - dark-mode.css  # Link your dark mode CSS file here
-extra_javascript:
-  - dark-light-toggle.js  # Link JavaScript file for dark/light mode toggle
+    scheme: "slate"  # Default dark mode
 
-# Define the site navigation, linking each page in your Documentation folder
+extra_css:
+  - dark-mode.css  # Link to dark mode styling
+
 nav:
-  - Home: index.md
-  - Tools Menu: 01-ToolsMenu.md
-  - Instrument Box: 02-InstrumentBox.md
-  - Sample Editor: 03-SampleEditor.md
-  - Pattern Editor: 04-PatternEditor.md
-  - Automation: 05-Automation.md
-  - Key Bindings: 22-KeyBindings.md
+  - Main page: ../README.md  # Point to the converted README.md
+  - Table of Contents:
+      - Main page: ../README.md
+      - Docs:
+          - Tools Menu: "01-ToolsMenu.md"
+          - Instrument Box: "02-InstrumentBox.md"
+          - Sample Editor: "03-SampleEditor.md"
+          - Pattern Editor: "04-PatternEditor.md"
+          - Automation: "05-Automation.md"
+          - Key Bindings: "22-KeyBindings.md"
