--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,24 +1,23 @@
 site_name: "Paketti - A Framework / Firmware update for Renoise created by Esa Ruoho a.k.a. Lackluster"
-docs_dir: "docs"  # Additional documentation files live here
+docs_dir: "docs"  # All .md files are stored here
 
 theme:
   name: "material"
   palette:
     primary: "indigo"
     accent: "indigo"
-    scheme: "slate"  # Default to dark mode
+    scheme: "slate"  # Dark mode default
 
 extra_css:
-  - ../dark-mode.css  # Link dark mode CSS from the root directory
+  - dark-mode.css
 
 nav:
-  - Main page: ../README.md  # Use README.md as the homepage
+  - Main page: README.md
   - Table of Contents:
-      - Main page: ../README.md
-      - Docs:
-          - Tools Menu: "01-ToolsMenu.md"
-          - Instrument Box: "02-InstrumentBox.md"
-          - Sample Editor: "03-SampleEditor.md"
-          - Pattern Editor: "04-PatternEditor.md"
-          - Automation: "05-Automation.md"
-          - Key Bindings: "22-KeyBindings.md"
+      - Main page: README.md
+      - Tools Menu: "01-ToolsMenu.md"
+      - Instrument Box: "02-InstrumentBox.md"
+      - Sample Editor: "03-SampleEditor.md"
+      - Pattern Editor: "04-PatternEditor.md"
+      - Automation: "05-Automation.md"
+      - Key Bindings: "22-KeyBindings.md"
