--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Paketti GitHub Pages with Static Sidebar and Dark Mode
+name: Deploy Paketti GitHub Pages with Dark Mode
 
 on:
   push:
@@ -13,39 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Convert Markdown to HTML with Sidebar
+      # Ensure dark-mode.css exists in the root directory
+      - name: Verify CSS file
         run: |
-          # Ensure CSS file exists
           if [ ! -f dark-mode.css ]; then echo "dark-mode.css is missing"; exit 1; fi
 
-          # Create output directory for HTML files
-          mkdir -p site
-
-          # Create sidebar HTML
-          echo '<div class="sidebar-links">' > site/sidebar.html
-          echo '<a href="index.html">Main page</a>' >> site/sidebar.html
-          for file in docs/*.md; do
-            filename=$(basename -- "$file" .md)
-            title=$(head -1 "$file" | sed 's/# //')
-            echo "<a href='$filename.html'>${title:-$filename}</a>" >> site/sidebar.html
-          done
-          echo '</div>' >> site/sidebar.html
-
-          # Convert README.md and docs/*.md to HTML with sidebar and CSS
-          echo '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Paketti Manual</title><link rel="stylesheet" href="../dark-mode.css"></head><body>' > site/header.html
-          echo '</body></html>' > site/footer.html
-
-          # Convert README.md to HTML with sidebar
-          pandoc README.md -s -o site/index.html --css dark-mode.css --include-before-body=site/sidebar.html --include-in-header=site/header.html --include-after-body=site/footer.html
-
-          # Convert each .md file to HTML with the same sidebar
-          for file in docs/*.md; do
-            filename=$(basename -- "$file" .md)
-            pandoc "$file" -s -o "site/$filename.html" --css dark-mode.css --include-before-body=site/sidebar.html --include-in-header=site/header.html --include-after-body=site/footer.html
-          done
-
+      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
+          publish_dir: .  # Deploy directly from the root directory
